# FrameLab

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  README.md
cmake/: CompilerWarnings.cmake  Doxygen.cmake
framelab/: CMakeLists.txt  Dependencies.cmake
framelab/src/: framelab.ixx  result.ixx
framelab/src/application/: application.cpp  application.ixx  events.cpp  events.ixx  imgui.cpp  imgui.ixx  layer.ixx  timestep.ixx  window.cpp  window.ixx
framelab/src/audio/: audio.cpp  audio.ixx
framelab/src/channel/: channel.cpp  channel.ixx
framelab/src/logging/: component_logger.ixx  logging.ixx
sandbox/: CMakeLists.txt
sandbox/src/: layers.cpp  layers.ixx  main.cpp
